RESOLVED FIXED49859
[Qt] GraphicsContext::strokeArc() is not necessary any more
https://bugs.webkit.org/show_bug.cgi?id=49859
Summary [Qt] GraphicsContext::strokeArc() is not necessary any more
Helder Correia
Reported 2010-11-19 22:49:34 PST
The function implementation can already be removed from the Qt port.
Attachments
Patch (1.98 KB, patch)
2010-11-19 22:53 PST, Helder Correia
no flags
Helder Correia
Comment 1 2010-11-19 22:53:14 PST
Andreas Kling
Comment 2 2010-11-19 22:56:32 PST
Comment on attachment 74469 [details] Patch Ah yes, we won't miss this. r=me (Not necessary since Qt, Cairo and CG use the HAVE_PATH_BASED_BORDER_RADIUS_DRAWING path in RenderObject.cpp)
WebKit Commit Bot
Comment 3 2010-11-20 02:25:36 PST
Comment on attachment 74469 [details] Patch Clearing flags on attachment: 74469 Committed r72473: <http://trac.webkit.org/changeset/72473>
WebKit Commit Bot
Comment 4 2010-11-20 02:25:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.