2010-11-20  Helder Correia  <helder@sencha.com>

Reviewed by Andreas Kling.

        [Qt] GraphicsContext::strokeArc() is not necessary any more
        https://bugs.webkit.org/show_bug.cgi?id=49859

        Remove strokeArc() from the Qt port.

        No test is needed.

        * platform/graphics/qt/GraphicsContextQt.cpp:

Canonical link: https://commits.webkit.org/62935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72473 268f45cc-cd09-0410-ab3c-d52691b4dbfc